# syssec-dd2497

./: .gitignore  LICENSE  README.md  TEST.txt  build.zig  build.zig.zon  gen.zig  run_order.sh
demo/: README.md  simple  simple.c  simple.py  solve1.py  solve2.py  solve3.py
exercise/: Makefile  readme.md  test.c
exercise/Mul2ToShl1/: CMakeLists.txt  Mul2ToShl1.cpp  README.md  test.c
exercise/count-additions/: Makefile  README.md  count_additions.cc
exercise/count_calls/: count_calls.cc  readme.md
passes/: bbrand.cc  constant_altering.cc  func_rand.cc  func_splitter.cc  garbage_insert.cc  inst_reorder.cc  inst_sub.cc  loop_flatten.cc  loop_split.cc  nop.cc  shadow_stack.cc  stack_frame_size_rand.cc  stack_reorder.cc  stackpad_rand.cc
rop/write4/: README.md  libwrite4.c  payload.py  write4  write4.c
test/: complex-sample.c  nested-loop.c  simple-loop.c  vulnerable.c
test-programs/: simple.c  simple.py
